@@ -4,7 +4,7 @@
 AC_PREREQ([2.60])
 
 # set project attribute
-AC_INIT([simbank], [0.3])
+AC_INIT([simbank], [0.4])
 
 # init automake
 AM_INIT_AUTOMAKE([-Wall -Werror])
@@ -27,7 +27,7 @@ AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_SRCDIR([simbank.c])
 
 AC_COPYRIGHT("Polygator")
-AC_REVISION(0.3)
+AC_REVISION(0.4)
 
 # prepare autoconfig header data
 AC_CONFIG_HEADER([autoconfig.h])
@@ -62,6 +62,14 @@ AC_PROG_INSTALL
 AC_PROG_SED
 
 m4_ifdef([AM_PROG_CC_C_O], [AM_PROG_CC_C_O])
+
+# Checks for packages.
+# Checks for required simbank-linux version.
+PG_SIMBANK_LINUX_VERSION_PREREQ([0.1])
+
+# Checks for header files.
+AC_CHECK_HEADER([simbank/version.h], [], [echo "Simbank kernel module not installed" ; exit 1])
+AC_CHECK_HEADER([simbank/simcard-def.h], [], [echo "Simbank kernel module not installed" ; exit 1])
 
 AC_CONFIG_FILES([Makefile])
 
